kustomize/litellm/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm
spec:
  template:
    spec:
      containers:
        - name: litellm
          image: ghcr.io/berriai/litellm:v1.88.2
      nodeSelector:
        intended-for: "samwise-frontend"
